@@ -1,3 +1,4 @@
+using System;
 using System.Collections;
 using Iesi.Collections;
 using NHibernate.Engine;
@@ -32,10 +33,10 @@ namespace NHibernate.Event
 		void Refresh(object obj, IDictionary refreshedAlready);
 
 		/// <summary> Cascade copy an entity instance</summary>
+		[Obsolete("Use Merge(string, object, IDictionary) instead")]
 		void SaveOrUpdateCopy(string entityName, object obj, IDictionary copiedAlready);
 
 		/// <summary> Cascade delete an entity instance</summary>
 		void Delete(string entityName, object child, bool isCascadeDeleteEnabled, ISet transientEntities);
 	}
-
 }
